Empezando el menú principal

--- a/SkinHolder_v2SourceCode/SkinHolder_v2SourceCode.csproj
+++ b/SkinHolder_v2SourceCode/SkinHolder_v2SourceCode.csproj
@@ -8,6 +8,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <Folder Include="bin\Debug\net7.0-windows\" />
       <Folder Include="src\Controllers\" />
       <Folder Include="src\Models\" />
     </ItemGroup>
@@ -104,6 +105,8 @@
 
     <ItemGroup>
       <None Remove="obj\**" />
+      <None Include="bin\Debug\net7.0-windows\Resources\Icons\MainWindow\SH.ico" />
+      <None Include="bin\Debug\net7.0-windows\Resources\Tipografia\CSTipografia.ttf" />
     </ItemGroup>
 
 </Project>
